// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentRating Renders CommentHeader with zero likes 1`] = `
<div
  className="container"
>
  <div
    className="thumbsUp"
  >
    <Icon
      as="i"
      name="thumbs up"
    />
    <span />
  </div>
  <div
    className="thumbsDown"
  >
    <Icon
      as="i"
      name="thumbs down"
    />
  </div>
</div>
`;

exports[`CommentRating Renders CommentRating with non-zero likes 1`] = `
<div
  className="container"
>
  <div
    className="thumbsUp"
  >
    <Icon
      as="i"
      name="thumbs up"
    />
    <span>
      2
    </span>
  </div>
  <div
    className="thumbsDown"
  >
    <Icon
      as="i"
      name="thumbs down"
    />
  </div>
</div>
`;
